--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "angular-responsive-carousel": "^2.1.2",
     "bootstrap": "^5.0.2",
     "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.6.0",
