--- a/.firebaserc
+++ b/.firebaserc
@@ -6,6 +6,13 @@
           "fir-bio-7be85"
         ]
       }
+    },
+    "proyecto-final-a6f6a": {
+      "hosting": {
+        "Proyecto": [
+          "proyecto-final-a6f6a"
+        ]
+      }
     }
   }
 }
